--- a/T5-G2/t5/src/main/resources/templates/fragments/navbar.html
+++ b/T5-G2/t5/src/main/resources/templates/fragments/navbar.html
@@ -88,12 +88,18 @@
 				-->
 
 				<!-- Profilo -->
-				
+				<!--
 				<a class="nav-link text-light mx-2 my-2" href="/profile">
 					<strong id="Username"></strong>
                     <i class="bi bi-person-circle"></i>
 				</a>
-				
+				-->
+                <a class="nav-link px-3" href="/profile">
+                    <span class="text-light mx-2 my-2">
+                        <strong id="Username"></strong>
+                        <i class="bi bi-person-circle"></i>
+                    </span>
+                </a>
 				<!-- OPZIONI E LOGOUT-->
 				<button
 					type="button"
